--- a/main.html
+++ b/main.html
@@ -23,8 +23,8 @@
 					<img src="https://res.cloudinary.com/john-mantas/image/upload/v1537291846/codepen/delicious-apples/green-apple-with-slice.png"
 						alt="green apple slice">
 				</div>
-				<div class="photo-album">
-					<ul>
+				<div class="photo-album" >
+					<ul type="none" >
 						<li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302064/codepen/delicious-apples/green-apple2.png"
 								alt="green apple"></li>
 						<li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537303532/codepen/delicious-apples/half-apple.png"
@@ -47,7 +47,7 @@
 			</div>
 			<div class="variant">
 				<h3>SELECT A COLOR</h3>
-				<ul>
+				<ul type="none">
 					<li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302064/codepen/delicious-apples/green-apple2.png"
 							alt="green apple"></li>
 					<li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302752/codepen/delicious-apples/yellow-apple.png"
@@ -59,8 +59,16 @@
 				</ul>
 			</div>
 			<div class="description">
+				<h3>BENEFITS</h3>
+				<ul>
+					<li> Helps lower cholesterol and blood pressure</li>
+				    <li>Promotes fullness and aids in weight control.</li>
+				    <li>Protects cells from damage</li>
+					<li>Associated with better respiratory health.</li>
+				</ul>
 				
 			</div>
+			<button type="button" value="add to cart">ADD TO CART</button>
 		</div>
 	</section>
 </body>
